fixed css page jump

--- a/public/static/css/about.css
+++ b/public/static/css/about.css
@@ -3,7 +3,7 @@ header {
     clip-path: polygon(50% 0%, 100% 0, 100% 65%, 50% 100%, 0 65%, 0 0);
     background: var(--bg-nav);
     margin-bottom: 1em;
-    padding-bottom: 1.5em;
+    padding-bottom: 8em;
     text-align: center;
 }
 
